Fix comment button overlaping the comment box

--- a/src/Post.css
+++ b/src/Post.css
@@ -104,9 +104,14 @@
 .comment-button {
     display: flex;
     justify-content:end;
-    width:100%;
+    min-width: 40px;
+    width:auto;
+    color: white;
     position: absolute;
-    translate:-10px -50px;
+    /* translate:-28px -50px; */
+    /* translate:400px -50px; */
+    right: 18px;
+    top: 24px;
     z-index:1;
     font-size:24px;
 }
@@ -192,13 +197,21 @@
     font-size: 12px;
 }
 .comment-button {
-    translate:-5px -45px;
+    /* translate:8px -45px; */
+    /* position: absolute;  */
+    right: 7;
+    top: 20px;
+    font-size: 20px;
+    pointer-events: auto;
+    width:auto;
+    min-width: 40px;
 }
 .comment-box-label {
     font-size: 12px;
 }
 .comment-body {
     font-size: .8rem;
+    flex: 1;
 }
 .comment-user {
     font-size: .8rem;
@@ -208,6 +221,12 @@
 }
 .no-comment-msg {
     font-size: .75rem;
+}
+.comment-box-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    width: 100%;
 }
 
     
